--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
 command = "ng build"
 functions = "netlify/functions"
 publish = "dist/simbiatuu/browser"
+
+[[plugins]]
+  package = "@netlify/angular-runtime"
