--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/_redirect",
               {
                 "glob": "**/*",
                 "input": "public"
