--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@ publish = "dist/simbiwebapp/browser"
 
 [[plugins]]
   package = "@netlify/angular-runtime"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
