--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@angular/platform-browser": "^20.3.2",
     "@angular/platform-browser-dynamic": "^20.3.2",
     "@angular/router": "^20.3.2",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@ng-icons/core": "^32.1.0",
+    "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.10",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
